fixed <p> spacing in .hero

--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -20,6 +20,9 @@
 
 
 .hero {
+	p:only-of-type {
+		margin: 0;
+	}
 	img {
 		display:block;
 		width: 100%;
